<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SimulationFragment"
    android:background="#ECE7E5"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_simulation"
        android:textSize="35sp"
        android:gravity="center"
        android:textColor="@color/black"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="type:"
        android:textSize="30dp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastral_domain"
        android:textSize="30dp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Surface:"
        android:textSize="30dp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_bedroom"
        android:textSize="30dp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
    <Button
        android:id="@+id/simulation_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DD6F4D"
        android:text="@string/simulate"
        android:textSize="35sp"

        />


</LinearLayout>